removing unneeded constructor parameter